# Bandwidth-Equitable-Zero-Transmission-Proctoring

./: .env.example  .gitattributes  .gitignore  BEZP_Technical_Specification_v2 (1).docx  CHANGELOG.md  DECISIONS.md  README.md  environment.yml  validation_set.h5
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: main.ts  (+2 more)
configs/: README.md
docs/: FINAL_REVIEW.md  PROJECT_DOCUMENTATION.md  SOURCE_DOCUMENT_REVIEW.md
infrastructure/: README.md
ml/: README.md
proctor-dashboard/: README.md
progress/: LIVE_EXECUTION_TRACKER.md  current-status.md  phase1-integration-proof.json  session-coordination-proof.md
scripts/: README.md
server/: README.md  alembic.ini  pyproject.toml
server/scripts/: validate_audit_chain.py
server/src/bezp_server/: __init__.py  config.py  main.py
server/src/bezp_server/api/: dependencies.py
server/src/bezp_server/api/routes/: anomaly_scores.py  clips.py  dashboard.py  exports.py  federated.py  interventions.py  reviews.py  session_history.py  session_state.py  signaling.py  telemetry.py
server/src/bezp_server/db/: __init__.py  models.py  session.py
server/src/bezp_server/ml/: FlowerBrowserClientAdapter.py  GradientDeserializer.py  strategy.py  validation.py
server/src/bezp_server/schemas/: __init__.py  anomaly.py  session_state.py  signaling.py
server/src/bezp_server/services/: ModelRollbackService.py  anomaly_store.py  rate_limiter.py  session_cache.py  session_state.py  sql_anomaly_store.py
server/src/db/migrations/: env.py  script.py.mako
server/src/db/migrations/versions/: 20260508_0001_create_anomaly_events.py
server/tests/: test_aggregation.py  test_anomaly_scores.py  test_federated_bridge.py
server/tests/load/: locustfile.py
tests/: README.md
(+98 files in other folders)
